package.json changes

--- a/package.json
+++ b/package.json
@@ -5,33 +5,33 @@
   "main": "server/index.js",
   "scripts": {
     "test": "cross-env NODE_ENV=test jest --config ./config/jest.config.js --json --outputFile=.jest-test-results.json",
-    "test:snaps": "yarn run test --updateSnapshot",
-    "test:watch": "yarn run test --watch",
+    "test:snaps": "npm run test --updateSnapshot",
+    "test:watch": "npm run test --watch",
     "test:debug": "cross-env NODE_ENV=test node --inspect-brk ./node_modules/jest/bin/jest.js --runInBand --config ./config/jest.config.js",
     "build": "rimraf .next && next build app",
     "export": "next export app",
-    "dev": "rimraf .next && yarn install && yarn run dev:serve",
+    "dev": "rimraf .next && npm install && npm run dev:serve",
     "dev:serve": "node server",
-    "prod": "yarn install && yarn run build && yarn run prod:serve",
+    "prod": "npm install && npm run build && npm run prod:serve",
     "prod:serve": "cross-env NODE_ENV=production node server",
     "mock": "node ./canned.config.js",
-    "dev:mock": "yarn install && npm-run-all --parallel mock \"dev:serve -- --mock\"",
-    "start": "yarn run prod",
-    "audit": "yarn run build -- --report",
+    "dev:mock": "npm install && npm-run-all --parallel mock \"dev:serve -- --mock\"",
+    "start": "npm run prod",
+    "audit": "npm run build -- --report",
     "clean:dist": "rimraf dist",
     "generate": "plop --plopfile generators/index.js",
     "storybook": "start-storybook -s ./app/static -p 6009",
     "build-storybook": "build-storybook -c .storybook -o ./out",
     "lint:js": "eslint app/",
-    "lint:js:fix": "yarn run lint:js --fix",
+    "lint:js:fix": "npm run lint:js --fix",
     "lint:css": "stylelint app/**/*.js",
-    "lint:css:fix": "yarn run lint:css --fix",
-    "lint": "yarn run lint:js && yarn run lint:css",
+    "lint:css:fix": "npm run lint:css --fix",
+    "lint": "npm run lint:js && npm run lint:css",
     "flow": "flow",
     "flow:install": "flow-typed install",
     "flow:coverage": "flow-coverage-report -i 'app/**/*.js' -x 'app/**/*.spec.js' -t html -t json -t text -o reports/flow/ --threshold 70",
     "pretty": "prettier --write **/*.{js,json,css}",
-    "validate": "yarn run lint && yarn run test && yarn run build",
+    "validate": "npm run lint && npm run test && npm run build",
     "perf": "docker run --shm-size=1g --rm -v \"$(pwd)\":/sitespeed.io sitespeedio/sitespeed.io:9.0.0-plus1 -b  --config ./config/performance/sitespeed.config.json --budget.configPath ./config/performance/sitespeed.budget.config.json"
   },
   "repository": {
@@ -43,10 +43,10 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/cli": "^7.6.4",
-    "@babel/core": "^7.6.4",
+    "@babel/core": "^7.9.0",
     "@babel/plugin-transform-flow-strip-types": "^7.6.3",
-    "@babel/plugin-transform-runtime": "^7.6.2",
-    "@babel/preset-env": "^7.6.3",
+    "@babel/plugin-transform-runtime": "^7.9.0",
+    "@babel/preset-env": "^7.9.5",
     "@babel/preset-flow": "^7.0.0",
     "@storybook/addon-a11y": "^5.2.3",
     "@storybook/addon-actions": "^5.2.3",
@@ -68,7 +68,7 @@
     "babel-preset-next": "^1.2.0",
     "canned": "^0.3.13",
     "cross-env": "^6.0.3",
-    "css-loader": "^3.2.0",
+    "css-loader": "^3.5.3",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.15.1",
     "enzyme-to-json": "^3.4.3",
@@ -93,7 +93,7 @@
     "jest-styled-components": "^6.3.4",
     "lighthouse": "^5.6.0",
     "lint-staged": "^9.4.3",
-    "mini-css-extract-plugin": "^0.8.0",
+    "mini-css-extract-plugin": "^0.8.2",
     "node-sass": "^4.13.0",
     "plop": "^2.5.3",
     "prettier": "1.19.1",
@@ -103,7 +103,7 @@
     "sass-loader": "^8.0.0",
     "storybook-addon-designs": "^5.1.1",
     "storybook-addon-smart-knobs": "^6.0.0",
-    "style-loader": "^1.0.0",
+    "style-loader": "^1.2.0",
     "stylelint": "^12.0.0",
     "stylelint-config-css-modules": "^2.1.0",
     "stylelint-config-prettier": "^6.0.0",
@@ -112,13 +112,15 @@
     "stylelint-formatter-pretty": "^1.1.3",
     "stylelint-processor-styled-components": "^1.8.0",
     "stylelint-webpack-plugin": "^1.1.0",
-    "webpack": "^4.41.2"
+    "webpack": "^4.43.0"
   },
   "dependencies": {
     "@babel/runtime": "^7.7.2",
+    "@material-ui/core": "^4.9.12",
+    "@material-ui/icons": "^4.9.1",
     "@xt-pagesource/atomic-react-pattern-lib": "^1.1.0",
     "@zeit/next-bundle-analyzer": "^0.1.2",
-    "agentkeepalive": "^4.1.0",
+    "agentkeepalive": "^4.1.1",
     "apicache": "^1.5.2",
     "axios": "^0.19.0",
     "babel-core": "7.0.0-bridge.0",
@@ -158,7 +160,7 @@
     "shortid": "2.2.15",
     "string-replace-webpack-plugin": "^0.1.3",
     "styled-components": "^4.4.1",
-    "terser": "^4.4.0",
+    "terser": "^4.6.12",
     "terser-webpack-plugin": "^2.2.1",
     "winston": "^3.2.1",
     "winston-daily-rotate-file": "^4.2.1"
