--- a/.eslintrc
+++ b/.eslintrc
@@ -33,6 +33,7 @@
     "react/react-in-jsx-scope": "off",
     "react/button-has-type": "off",
     "react/jsx-props-no-spreading": "off",
+    "react/sort-comp": "off",
     "react/jsx-filename-extension": [
       "error",
       {
